--- a/plugins/e4sm.de.metamodel.design/plugin.properties
+++ b/plugins/e4sm.de.metamodel.design/plugin.properties
@@ -1,3 +1,3 @@
-pluginName = e4sm.de.medamodel.design
+pluginName = e4sm.de.metamodel.design
 providerName = Eclipse Modeling Project
 viewpointName = MyViewpoint
