--- a/plugins/e4sm.de.metamodel.design/plugin.xml
+++ b/plugins/e4sm.de.metamodel.design/plugin.xml
@@ -2,8 +2,8 @@
 <?eclipse version="3.0"?>
 <plugin>
   <extension point="org.eclipse.sirius.componentization">
-    <component class="e4sm.de.medamodel.design.Activator"
-               id="e4sm.de.medamodel.design"
+    <component class="e4sm.de.metamodel.design.Activator"
+               id="e4sm.de.metamodel.design"
 	       name="sirius">
     </component>
   </extension>
