Fix Java Version and improve strings

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -1,7 +1,7 @@
 #
 
 pluginName = e4sm.de.metamodel Edit Support
-providerName = www.example.org
+providerName = www.tu-ilmenau.de/sse
 
 _UI_CreateChild_text = {0}
 _UI_CreateChild_text2 = {1} {0}
@@ -16,7 +16,6 @@ _UI_Component_type = Component
 _UI_MachineLearningComponent_type = Machine Learning Component
 _UI_Connector_type = Connector
 _UI_PhysicalConnector_type = Physical Connector
-_UI_PhisicalComponent_type = Phisical Component
 _UI_SoftwareComponent_type = Software Component
 _UI_LogicalConnector_type = Logical Connector
 _UI_Heuristic_type = Heuristic
@@ -32,7 +31,7 @@ _UI_Connector_source_feature = Source
 _UI_Connector_target_feature = Target
 _UI_PhysicalConnector_minSpeed_feature = Min Speed
 _UI_PhysicalConnector_maxSpeed_feature = Max Speed
-_UI_SoftwareComponent_OutputUncertanty_feature = Output Uncertanty
+_UI_SoftwareComponent_OutputUncertanty_feature = Output Uncertainty
 _UI_Unknown_feature = Unspecified
 
 _UI_Package_type = Package
@@ -43,10 +42,9 @@ _UI_Human_type = Human
 _UI_Robot_type = Robot
 _UI_Package_components_feature = Components
 _UI_Package_softwareComponents_feature = Software Components
-_UI_Package_phisicalComponents_feature = Phisical Components
 _UI_Model_packages_feature = Packages
 _UI_NamedElement_name_feature = Name
-_UI_NamedElement_uuid_feature = Uuid
+_UI_NamedElement_uuid_feature = UUID
 _UI_Package_connectors_feature = Connectors
 _UI_Sector_type = Sector
 _UI_Package_sectors_feature = Sectors
@@ -56,3 +54,5 @@ _UI_Actuator_type = Actuator
 _UI_PhysicalComponent_type = Physical Component
 _UI_Element_type = Element
 _UI_Element_uuid_feature = Uuid
+_UI_SoftwareComponent_OutputUncertainty_feature = Output Uncertainty
+_UI_Model_actors_feature = Actors
