--- a/plugins/e4sm.de.metamodel.editor/plugin.properties
+++ b/plugins/e4sm.de.metamodel.editor/plugin.properties
@@ -1,9 +1,9 @@
 #
 
 pluginName = e4sm.de.metamodel Editor
-providerName = www.example.org
+providerName = www.tu-ilmenau.de/sse
 
-_UI_E4smEditor_menu = &E4sm Editor
+_UI_E4smEditor_menu = &E4SM Editor
 
 _UI_CreateChild_menu_item = &New Child
 _UI_CreateSibling_menu_item = N&ew Sibling
@@ -26,14 +26,14 @@ _UI_MultiObjectSelected = Selected {0} Objects
 
 _UI_OpenEditorError_label = Open Editor
 
-_UI_Wizard_category = Example EMF Model Creation Wizards
+_UI_Wizard_category = E4SM Model Creation Wizard
 
 _UI_CreateModelError_message = Problems encountered in file "{0}"
 
-_UI_E4smModelWizard_label = E4sm Model
-_UI_E4smModelWizard_description = Create a new E4sm model
+_UI_E4smModelWizard_label = E4SM Model
+_UI_E4smModelWizard_description = Create a new E4SM model
 
-_UI_E4smEditor_label = E4sm Model Editor
+_UI_E4smEditor_label = E4SM Model Editor
 
 _UI_E4smEditorFilenameDefaultBase = My
 _UI_E4smEditorFilenameExtensions = e4sm
@@ -51,10 +51,10 @@ _UI_Wizard_initial_object_description = Select a model object to create
 _UI_FileConflict_label = File Conflict
 _WARN_FileConflict = There are unsaved changes that conflict with changes made outside the editor.  Do you wish to discard this editor's changes?
 
-_UI_e4smEditor_menu = &e4sm Editor
-_UI_e4smModelWizard_label = e4sm Model
+_UI_e4smEditor_menu = &E4SM Editor
+_UI_e4smModelWizard_label = E4SM Model
 _UI_e4smModelWizard_description = Create a new e4sm model
-_UI_e4smEditor_label = e4sm Model Editor
+_UI_e4smEditor_label = E4SM Model Editor
 _UI_e4smEditorFilenameDefaultBase = My
 _UI_e4smEditorFilenameExtensions = e4sm
 
