Add pins, fixes #1

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -53,6 +53,11 @@ _UI_Sensor_type = Sensor
 _UI_Actuator_type = Actuator
 _UI_PhysicalComponent_type = Physical Component
 _UI_Element_type = Element
-_UI_Element_uuid_feature = Uuid
+_UI_Element_uuid_feature = UUID
 _UI_SoftwareComponent_OutputUncertainty_feature = Output Uncertainty
 _UI_Model_actors_feature = Actors
+_UI_Pin_type = Pin
+_UI_InputPin_type = Input Pin
+_UI_OutputPin_type = Output Pin
+_UI_Component_pins_feature = Pins
+_UI_Package_physicalComponents_feature = Physical Components
