Add support for responsiblePersons with Pictures

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -61,3 +61,11 @@ _UI_InputPin_type = Input Pin
 _UI_OutputPin_type = Output Pin
 _UI_Component_pins_feature = Pins
 _UI_Package_physicalComponents_feature = Physical Components
+_UI_Person_type = Person
+_UI_Component_mainResponsible_feature = Main Responsible
+_UI_Package_mainResponsible_feature = Main Responsible
+_UI_Person_surname_feature = Surname
+_UI_Person_department_feature = Department
+_UI_Person_responsibleForComponents_feature = Responsible For Components
+_UI_Model_personsPicturesPath_feature = Persons Pictures Path
+_UI_Person_pictureFileName_feature = Picture File Name
