--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -69,3 +69,5 @@ _UI_Person_department_feature = Department
 _UI_Person_responsibleForComponents_feature = Responsible For Components
 _UI_Model_personsPicturesPath_feature = Persons Pictures Path
 _UI_Person_pictureFileName_feature = Picture File Name
+_UI_OptionallyNamedElement_type = Optionally Named Element
+_UI_OptionallyNamedElement_name_feature = Name
