Add "Synchronous" attribute to SoftwareComponent

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -54,7 +54,6 @@ _UI_Actuator_type = Actuator
 _UI_PhysicalComponent_type = Physical Component
 _UI_Element_type = Element
 _UI_Element_uuid_feature = UUID
-_UI_SoftwareComponent_OutputUncertainty_feature = Output Uncertainty
 _UI_Model_actors_feature = Actors
 _UI_Pin_type = Pin
 _UI_InputPin_type = Input Pin
@@ -71,3 +70,5 @@ _UI_Model_personsPicturesPath_feature = Persons Pictures Path
 _UI_Person_pictureFileName_feature = Picture File Name
 _UI_OptionallyNamedElement_type = Optionally Named Element
 _UI_OptionallyNamedElement_name_feature = Name
+_UI_SoftwareComponent_outputUncertainty_feature = Output Uncertainty
+_UI_SoftwareComponent_synchronous_feature = Synchronous
