Allow specifying components, sectors may contain sectors.

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -74,3 +74,9 @@ _UI_SoftwareComponent_outputUncertainty_feature = Output Uncertainty
 _UI_SoftwareComponent_synchronous_feature = Synchronous
 _UI_SoftwareComponent_synchronous_feature_help = If checked, the component will execute and then provide some results.\nIf unchecked, the execution of the system continues while this component executes.
 _UI_EMF_Editor_Category_Execution = Execution
+_UI_Component_specifiedInPackage_feature = Specified In Package
+_UI_Package_packages_feature = Packages
+_UI_Package_containedBy_feature = Contained By
+_UI_Package_specifiesComponent_feature = Specifies Component
+_UI_Sector_sectors_feature = Sectors
+_UI_Sector_containedBy_feature = Contained By
