Small fixes, implement some constraints and tests.

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -80,3 +80,4 @@ _UI_Package_containedBy_feature = Contained By
 _UI_Package_specifiesComponent_feature = Specifies Component
 _UI_Sector_sectors_feature = Sectors
 _UI_Sector_containedBy_feature = Contained By
+_UI_Package_specifiesComponents_feature = Specifies Components
