--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -81,3 +81,42 @@ _UI_Package_specifiesComponent_feature = Specifies Component
 _UI_Sector_sectors_feature = Sectors
 _UI_Sector_containedBy_feature = Contained By
 _UI_Package_specifiesComponents_feature = Specifies Components
+_UI_ParameterDefinition_type = Parameter Definition
+_UI_Parameter_type = Parameter
+_UI_ParametrisableElement_type = Parametrisable Element
+_UI_Model_parameterDefinitions_feature = Parameter Definitions
+_UI_ParameterDefinition_type_feature = Type
+_UI_ParameterDefinition_parameters_feature = Parameters
+_UI_Parameter_value_feature = Value
+_UI_Parameter_initialValue_feature = Initial Value
+_UI_Parameter_parameterdefinition_feature = Parameterdefinition
+_UI_ParametrisableElement_parameters_feature = Parameters
+_UI_ParameterType_INTEGER_literal = INTEGER
+_UI_ParameterType_DOUBLE_literal = DOUBLE
+_UI_ParameterType_STRING_literal = STRING
+_UI_ParameterDefinition_unit_feature = Unit
+_UI_UnitOfMeasurement_cm_literal = cm
+_UI_UnitOfMeasurement_m_literal = m
+_UI_UnitOfMeasurement_mm_literal = mm
+_UI_UnitOfMeasurement_percentage_literal = percentage
+_UI_UnitOfMeasurement_s_literal = s
+_UI_UnitOfMeasurement_ms_literal = ms
+_UI_UnitOfMeasurement_minutes_literal = minutes
+_UI_UnitOfMeasurement_hours_literal = hours
+_UI_UnitOfMeasurement_mbps_literal = mbps
+_UI_UnitOfMeasurement_none_literal = none
+_UI_Parameter_parameterDefinition_feature = Parameter Definition
+_UI_ParameterDefinition_canBeDefinedTo_feature = Can Be Defined To
+_UI_ParameterDefinition_mustBeDefinedOn_feature = Must Be Defined On
+_UI_ParameterDefinition_defaultValue_feature = Default Value
+_UI_ParameterDefinition_canBeDefinedOn_feature = Can Be Defined On
+_UI_E4SMElementType_Component_literal = Component
+_UI_E4SMElementType_Connector_literal = Connector
+_UI_E4SMElementType_PhysicalConnector_literal = PhysicalConnector
+_UI_E4SMElementType_SoftwareConnector_literal = SoftwareConnector
+_UI_E4SMElementType_Pin_literal = Pin
+_UI_E4SMElementType_InputPin_literal = InputPin
+_UI_E4SMElementType_OutputPin_literal = OutputPin
+_UI_ParameterDefinitionLibrary_type = Parameter Definition Library
+_UI_Model_parameterDefinitionlibraries_feature = Parameter Definitionlibraries
+_UI_ParameterDefinitionLibrary_parameterDefinitions_feature = Parameter Definitions
