Variants, new icons

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -120,3 +120,7 @@ _UI_E4SMElementType_OutputPin_literal = OutputPin
 _UI_ParameterDefinitionLibrary_type = Parameter Definition Library
 _UI_Model_parameterDefinitionlibraries_feature = Parameter Definitionlibraries
 _UI_ParameterDefinitionLibrary_parameterDefinitions_feature = Parameter Definitions
+_UI_Variant_type = Variant
+_UI_Model_variants_feature = Variants
+_UI_Parameter_appliesOnlyOnVariants_feature = Applies Only On Variants
+_UI_Parameter_doesNotApplyOnVariants_feature = Does Not Apply On Variants
