--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -124,3 +124,4 @@ _UI_Variant_type = Variant
 _UI_Model_variants_feature = Variants
 _UI_Parameter_appliesOnlyOnVariants_feature = Applies Only On Variants
 _UI_Parameter_doesNotApplyOnVariants_feature = Does Not Apply On Variants
+_UI_ParameterDefinition_shallNotBeDefinedOn_feature = Shall Not Be Defined On
