Stable status, TODO: add Time picker

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -195,3 +195,4 @@ _UI_TwoDimensionalPlot_yLabel_feature = YLabel
 _UI_ThreeDimensionalPlot_zLabel_feature = ZLabel
 _UI_ScalarValue_value_feature = Value
 _UI_AnalysisExecution_runOnModel_feature = Run On Model
+_UI_Parameter_currentValue_feature = Current Value
