Initial support for Guava graphs

--- a/plugins/e4sm.de.metamodel.editor/plugin.properties
+++ b/plugins/e4sm.de.metamodel.editor/plugin.properties
@@ -79,3 +79,10 @@ _UI_ResultsModelWizard_description = Create a new Results model
 _UI_ResultsEditorFilenameDefaultBase = My
 _UI_ResultsEditorFilenameExtensions = results
 
+_UI_GuavaEditor_menu = &Guava Editor
+_UI_GuavaModelWizard_label = Guava Model
+_UI_GuavaModelWizard_description = Create a new Guava model
+_UI_GuavaEditor_label = Guava Model Editor
+_UI_GuavaEditorFilenameDefaultBase = My
+_UI_GuavaEditorFilenameExtensions = guava
+
