--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -196,3 +196,17 @@ _UI_ThreeDimensionalPlot_zLabel_feature = ZLabel
 _UI_ScalarValue_value_feature = Value
 _UI_AnalysisExecution_runOnModel_feature = Run On Model
 _UI_Parameter_currentValue_feature = Current Value
+_UI_Graph_type = Graph
+_UI_AbstractGraph_type = Abstract Graph
+_UI_ImmutableGraph_type = Immutable Graph
+_UI_MutableGraph_type = Mutable Graph
+_UI_PredecessorsFunction_type = Predecessors Function
+_UI_Network_type = Network
+_UI_MutableNetwork_type = Mutable Network
+_UI_AbstractNetwork_type = Abstract Network
+_UI_ImmutableNetwork_type = Immutable Network
+_UI_E4SMMutableNetwork_type = E4SM Mutable Network
+_UI_SuccessorFunction_type = Successor Function
+_UI_NetworkGenerator_type = Network Generator
+_UI_E4SMImmutableNetwork_type = E4SM Immutable Network
+_UI_SuccessorsFunction_type = Successors Function
