--- a/plugins/e4sm.de.metamodel.edit/plugin.xml
+++ b/plugins/e4sm.de.metamodel.edit/plugin.xml
@@ -58,4 +58,17 @@
                org.eclipse.emf.edit.provider.IItemPropertySource"/>
    </extension>
 
+   <extension point="org.eclipse.emf.edit.itemProviderAdapterFactories">
+      <!-- @generated e4sm -->
+      <factory
+            uri="https://guava.dev/releases/30.1"
+            class="e4sm.de.metamodel.e4sm.guava.provider.GuavaItemProviderAdapterFactory"
+            supportedTypes=
+              "org.eclipse.emf.edit.provider.IEditingDomainItemProvider
+               org.eclipse.emf.edit.provider.IStructuredItemContentProvider
+               org.eclipse.emf.edit.provider.ITreeItemContentProvider
+               org.eclipse.emf.edit.provider.IItemLabelProvider
+               org.eclipse.emf.edit.provider.IItemPropertySource"/>
+   </extension>
+
 </plugin>
