--- a/plugins/e4sm.de.metamodel/plugin.xml
+++ b/plugins/e4sm.de.metamodel/plugin.xml
@@ -59,4 +59,12 @@
             class="e4sm.de.metamodel.e4sm.analysis.results.util.ResultsResourceFactoryImpl"/>
    </extension>
 
+   <extension point="org.eclipse.emf.ecore.generated_package">
+      <!-- @generated e4sm -->
+      <package
+            uri="https://guava.dev/releases/30.1"
+            class="e4sm.de.metamodel.e4sm.guava.GuavaPackage"
+            genModel="model/e4sm.genmodel"/>
+   </extension>
+
 </plugin>
