First example of time analyis (only works with simple pins)

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -210,3 +210,6 @@ _UI_SuccessorFunction_type = Successor Function
 _UI_NetworkGenerator_type = Network Generator
 _UI_E4SMImmutableNetwork_type = E4SM Immutable Network
 _UI_SuccessorsFunction_type = Successors Function
+_UI_Pin_outgoingConnectors_feature = Outgoing Connectors
+_UI_Pin_incomingConnectors_feature = Incoming Connectors
+_UI_Pin_gatewayPin_feature = Gateway Pin
