Add QueueType to input pins

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -213,3 +213,11 @@ _UI_SuccessorsFunction_type = Successors Function
 _UI_Pin_outgoingConnectors_feature = Outgoing Connectors
 _UI_Pin_incomingConnectors_feature = Incoming Connectors
 _UI_Pin_gatewayPin_feature = Gateway Pin
+_UI_SoftwareComponent_numberOfServers_feature = Number Of Servers
+_UI_Pin_stream_feature = Stream
+_UI_InputPin_queueType_feature = Queue Type
+_UI_QueueType_FIFO_literal = FIFO
+_UI_QueueType_LIFO_literal = LIFO
+_UI_QueueType_RANDOM_literal = RANDOM
+_UI_QueueType_LATEST_ONLY_literal = LATEST_ONLY
+_UI_QueueType_STORE_literal = STORE
