Add time function to sensors

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -221,3 +221,4 @@ _UI_QueueType_LIFO_literal = LIFO
 _UI_QueueType_RANDOM_literal = RANDOM
 _UI_QueueType_LATEST_ONLY_literal = LATEST_ONLY
 _UI_QueueType_STORE_literal = STORE
+_UI_Sensor_timeFunction_feature = Time Function
