Add race semantic

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -222,3 +222,8 @@ _UI_QueueType_RANDOM_literal = RANDOM
 _UI_QueueType_LATEST_ONLY_literal = LATEST_ONLY
 _UI_QueueType_STORE_literal = STORE
 _UI_Sensor_timeFunction_feature = Time Function
+_UI_Pin_raceSemantic_feature = Race Semantic
+_UI_RaceSemantic_FCFS_literal = FCFS
+_UI_RaceSemantic_DUPLICATE_literal = DUPLICATE
+_UI_RaceSemantic_MERGE_literal = MERGE
+_UI_RaceSemantic_MERGE_AND_DUPLICATE_literal = MERGE_AND_DUPLICATE
