--- a/plugins/e4sm.de.antlr4.petri.grammar/build.gradle
+++ b/plugins/e4sm.de.antlr4.petri.grammar/build.gradle
@@ -19,10 +19,18 @@ dependencies{
     antlr "org.antlr:antlr4:4.9.3"
     implementation "org.antlr:antlr4-runtime:4.9.3"
     testImplementation(platform('org.junit:junit-bom:5.8.2'))
-    testImplementation('org.junit.jupiter:junit-jupiter')
+    testImplementation('org.junit.jupiter:junit-jupiter:5.8.2')
     testImplementation fileTree('build/generated-src/antlr/main')
     //implementation files('lib/gpal.jar')
 }
+
+
+task copyDependencies(type: Copy) {
+    from configurations.runtimeClasspath
+    include 'antlr4*.jar'
+    into "gradle-libs"
+}
+
 
 generateGrammarSource {
     maxHeapSize = "128m"
@@ -39,19 +47,31 @@ generateGrammarSource {
     
 }
 
-compileJava.dependsOn generateGrammarSource
+compileJava.dependsOn generateGrammarSource, copyDependencies
 
 sourceSets{
+	main{
+		java.srcDir 'src/e4sm/de/antlr4/petri/model/'
+	}
     generated {
         java.srcDir 'src-gen'
+    }
+    test{
+    	java.srcDir 'src/test'
     }
 }
 
 compileJava.source sourceSets.generated.java, sourceSets.main.java
 
-clean{
+clean {
     delete "gen-src"
     delete "src-gen"
+    delete fileTree("gradle-libs/").matching {
+    	include "*.jar"
+    }
+    delete fileTree("src/main/antlr").matching {
+    	include "*.java", "*.interp", "*.tokens"
+    }
 }
 
 /*eclipse{
@@ -60,11 +80,18 @@ clean{
     }
 }*/
 
+
 test {
     //From folder: EDITOR/plugins/e4sm.de.antlr4.petri.grammar/build/classes/java/main  -  run:
     //grun e4sm.de.antlr4.petri.grammar.SCPN expressions -gui ..\..\..\..\examples\input.txt
     useJUnitPlatform()
+    //include "e4sm.de.antlr4.petri.tests/*";
     testLogging {
+    	// Make sure output from
+        // standard out or error is shown
+        // in Gradle output.
+        showStandardStreams = true
+        
         events "passed", "skipped", "failed"
     }
 }
