Move from subpackages to different ecore files

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -227,3 +227,4 @@ _UI_RaceSemantic_FCFS_literal = FCFS
 _UI_RaceSemantic_DUPLICATE_literal = DUPLICATE
 _UI_RaceSemantic_MERGE_literal = MERGE
 _UI_RaceSemantic_MERGE_AND_DUPLICATE_literal = MERGE_AND_DUPLICATE
+_UI_Component_codeSpecification_feature = Code Specification
