--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -399,3 +399,10 @@ _UI_AttributeSpecification_array_feature = Array
 _UI_Import_type = Import
 _UI_Model_imports_feature = Imports
 _UI_Import_referencedModel_feature = Referenced Model
+_UI_Assignment_type = Assignment
+_UI_AssignableElement_type = Assignable Element
+_UI_Assignment_expression_feature = Expression
+_UI_Assignment_target_feature = Target
+_UI_Const_expression_feature = Expression
+_UI_AssignableElementReference_type = Assignable Element Reference
+_UI_AssignableElementReference_ref_feature = Ref
