Add collect / amplify to inp-output pins, OR firingStrategy to metamodel

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -406,3 +406,8 @@ _UI_Assignment_target_feature = Target
 _UI_Const_expression_feature = Expression
 _UI_AssignableElementReference_type = Assignable Element Reference
 _UI_AssignableElementReference_ref_feature = Ref
+_UI_Component_firingStrategy_feature = Firing Strategy
+_UI_InputPin_collect_feature = Collect
+_UI_OutputPin_amplify_feature = Amplify
+_UI_ComponentFiringStrategy_AND_literal = AND
+_UI_ComponentFiringStrategy_OR_literal = OR
