Make components delayableElements

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -411,3 +411,4 @@ _UI_InputPin_collect_feature = Collect
 _UI_OutputPin_amplify_feature = Amplify
 _UI_ComponentFiringStrategy_AND_literal = AND
 _UI_ComponentFiringStrategy_OR_literal = OR
+_UI_Sensor_timeFunctionDeprecated_feature = Time Function Deprecated
