Add better description to model's image path element

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -67,6 +67,7 @@ _UI_Person_surname_feature = Surname
 _UI_Person_department_feature = Department
 _UI_Person_responsibleForComponents_feature = Responsible For Components
 _UI_Model_personsPicturesPath_feature = Persons Pictures Path
+_UI_Model_personsPicturesPath_feature_description = A path to a folder containing images, in the form: /myProjectID/path/to/folder/ . The / at the beginning and end must be present!
 _UI_Person_pictureFileName_feature = Picture File Name
 _UI_SoftwareComponent_outputUncertainty_feature = Output Uncertainty
 _UI_SoftwareComponent_synchronous_feature = Synchronous
