Add output uncertainty to output pins, fix different syntax order 4 comp

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -413,3 +413,4 @@ _UI_OutputPin_amplify_feature = Amplify
 _UI_ComponentFiringStrategy_AND_literal = AND
 _UI_ComponentFiringStrategy_OR_literal = OR
 _UI_Sensor_timeFunctionDeprecated_feature = Time Function Deprecated
+_UI_OutputPin_outputUncertainty_feature = Output Uncertainty
