Add Data Store nodes to MM, QVTo and Sirius

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -414,3 +414,8 @@ _UI_ComponentFiringStrategy_AND_literal = AND
 _UI_ComponentFiringStrategy_OR_literal = OR
 _UI_Sensor_timeFunctionDeprecated_feature = Time Function Deprecated
 _UI_OutputPin_outputUncertainty_feature = Output Uncertainty
+_UI_DataStore_type = Data Store
+_UI_DataNode_type = Data Node
+_UI_Component_datastores_feature = Datastores
+_UI_Package_datastores_feature = Datastores
+_UI_Sector_datastores_feature = Datastores
