--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 bin
 target
+
+plugins/e4sm.de.metamodel.to.scpn.qvto/docs/~$Transformation Definition.pptx
+
+scripts/timenet-xml-fix/node_modules/
