Add optional attribute to input pin

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -419,3 +419,4 @@ _UI_DataNode_type = Data Node
 _UI_Component_datastores_feature = Datastores
 _UI_Package_datastores_feature = Datastores
 _UI_Sector_datastores_feature = Datastores
+_UI_InputPin_optional_feature = Optional
