--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -420,3 +420,5 @@ _UI_Component_datastores_feature = Datastores
 _UI_Package_datastores_feature = Datastores
 _UI_Sector_datastores_feature = Datastores
 _UI_InputPin_optional_feature = Optional
+_UI_DocumentableElement_type = Documentable Element
+_UI_DocumentableElement_documentation_feature = Documentation
