--- a/plugins/e4sm.de.metamodel.xtext/e4sm.de.metamodel.xtext.parent/e4sm.de.metamodel.xtext/build.properties
+++ b/plugins/e4sm.de.metamodel.xtext/e4sm.de.metamodel.xtext.parent/e4sm.de.metamodel.xtext/build.properties
@@ -15,3 +15,4 @@ additional.bundles = org.eclipse.xtext.xbase,\
                      org.objectweb.asm,\
                      org.apache.commons.logging,\
                      org.apache.log4j
+jre.compilation.profile = JavaSE-11
