--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -422,3 +422,4 @@ _UI_Sector_datastores_feature = Datastores
 _UI_InputPin_optional_feature = Optional
 _UI_DocumentableElement_type = Documentable Element
 _UI_DocumentableElement_documentation_feature = Documentation
+_UI_ExecutionElement_type = Element
