Add CM to the metamodel

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -423,3 +423,33 @@ _UI_InputPin_optional_feature = Optional
 _UI_DocumentableElement_type = Documentable Element
 _UI_DocumentableElement_documentation_feature = Documentation
 _UI_ExecutionElement_type = Element
+_UI_ClassificationComponent_type = Classification Component
+_UI_Environment_type = Environment
+_UI_ClassificationClass_type = Classification Class
+_UI_ClassificationClassDistribution_type = Classification Class Distribution
+_UI_ConfusionMatrix_type = Confusion Matrix
+_UI_ConfusionMatrixEntry_type = Confusion Matrix Entry
+_UI_Model_environments_feature = Environments
+_UI_Model_classificationClasses_feature = Classification Classes
+_UI_ClassificationComponent_confusionMatrixes_feature = Confusion Matrixes
+_UI_Environment_classificationClasses_feature = Classification Classes
+_UI_ClassificationClassDistribution_classificationClass_feature = Classification Class
+_UI_ClassificationClassDistribution_probability_feature = Probability
+_UI_ConfusionMatrix_entries_feature = Entries
+_UI_ConfusionMatrixEntry_value_feature = Value
+_UI_ConfusionMatrixEntry_predicted_feature = Predicted
+_UI_ConfusionMatrixEntry_truth_feature = Truth
+_UI_NormalizedConfusionMatrix_type = Normalized Confusion Matrix
+_UI_MulticlassConfusionMatrix_type = Multiclass Confusion Matrix
+_UI_BinaryConfusionMatrix_type = Binary Confusion Matrix
+_UI_BinaryClassificationComponent_type = Binary Classification Component
+_UI_MulticlassClassificationComponent_type = Multiclass Classification Component
+_UI_MulticlassConfusionMatrix_entries_feature = Entries
+_UI_BinaryConfusionMatrix_tp_feature = Tp
+_UI_BinaryConfusionMatrix_tn_feature = Tn
+_UI_BinaryConfusionMatrix_fp_feature = Fp
+_UI_BinaryConfusionMatrix_fn_feature = Fn
+_UI_BinaryConfusionMatrix_positiveClass_feature = Positive Class
+_UI_BinaryConfusionMatrix_negativeClass_feature = Negative Class
+_UI_BinaryClassificationComponent_confusionMatrixes_feature = Confusion Matrixes
+_UI_MulticlassClassificationComponent_confusionMatrixes_feature = Confusion Matrixes
