--- a/plugins/e4sm.de.metamodel.design/build.properties
+++ b/plugins/e4sm.de.metamodel.design/build.properties
@@ -6,3 +6,4 @@ bin.includes = META-INF/,\
                plugin.properties,\
                plugin.xml,\
                icons/
+jre.compilation.profile = JavaSE-17
