Initial implementation of the BinaryComp transformation

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -453,3 +453,4 @@ _UI_BinaryConfusionMatrix_positiveClass_feature = Positive Class
 _UI_BinaryConfusionMatrix_negativeClass_feature = Negative Class
 _UI_BinaryClassificationComponent_confusionMatrixes_feature = Confusion Matrixes
 _UI_MulticlassClassificationComponent_confusionMatrixes_feature = Confusion Matrixes
+_UI_ClassificationComponent_environment_feature = Environment
