add welcome page
created new plug-in + feature for the welcome page

--- a/plugins/e4sm.de.metamodel.design/plugin.xml
+++ b/plugins/e4sm.de.metamodel.design/plugin.xml
@@ -26,7 +26,7 @@
         </property>
         <property
               name="windowImages"
-              value="platform:/plugin/e4sm.de.metamodel.branding/icons/logo_16.gif,platform:/plugin/e4sm.de.metamodel.branding/icons/logo_32.gif,platform:/plugin/e4sm.de.metamodel.branding/icons/logo_64.gif,platform:/plugin/e4sm.de.metamodel.branding/icons/logo_64.gif,platform:/plugin/e4sm.de.metamodel.branding/icons/logo_64.gif,platform:/plugin/e4sm.de.metamodel.branding/icons/logo_64.gif">
+              value="platform:/plugin/e4sm.de.metamodel.branding/icons/logo_16.gif,platform:/plugin/e4sm.de.metamodel.branding/icons/logo_32.gif,platform:/plugin/e4sm.de.metamodel.branding/icons/logo_64.gif">
         </property>
         <property
               name="aboutImage"
