--- a/packaging/e4sm.de.intro.custom/build.properties
+++ b/packaging/e4sm.de.intro.custom/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                index.html,\
-               introContent.xml
+               introContent.xml,\
+               src/
