--- a/packaging/extra.plugins.feature/.project
+++ b/packaging/extra.plugins.feature/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>extra.plugins.feature</name>
+	<name>e4sm.de.extra.plugins.feature</name>
 	<comment></comment>
 	<projects>
 	</projects>
