--- a/plugins/e4sm.de.metamodel.xtext/e4sm.de.metamodel.xtext.parent/pom.xml
+++ b/plugins/e4sm.de.metamodel.xtext/e4sm.de.metamodel.xtext.parent/pom.xml
@@ -7,13 +7,14 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<xtextVersion>2.26.0</xtextVersion>
-		<mwe2Version>2.12.2</mwe2Version>
+		<xtextVersion>2.30.0</xtextVersion>
+		<mwe2Version>2.14.0</mwe2Version>
+		<log4jVersion>1.2.24</log4jVersion>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
 		<!-- Tycho settings -->
-		<tycho-version>2.7.0</tycho-version>
+		<tycho-version>2.7.5</tycho-version>
 		<!-- Define overridable properties for tycho-surefire-plugin -->
 		<platformSystemProperties></platformSystemProperties>
 		<moduleProperties></moduleProperties>
