--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -531,3 +531,5 @@ _UI_ConfidentialityImpact_NONE_literal = NONE
 _UI_ConfidentialityImpact_HIGH_literal = HIGH
 _UI_State_PUBLISHED_literal = PUBLISHED
 _UI_State_REJECTED_literal = REJECTED
+_UI_ParameterReference_type = Parameter Reference
+_UI_ParameterReference_parameter_feature = Parameter
