--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -533,3 +533,4 @@ _UI_State_PUBLISHED_literal = PUBLISHED
 _UI_State_REJECTED_literal = REJECTED
 _UI_ParameterReference_type = Parameter Reference
 _UI_ParameterReference_parameter_feature = Parameter
+_UI_Exponentiation_type = Exponentiation
