Add eslint to scripts

--- a/scripts/import-intermiediate-language/package.json
+++ b/scripts/import-intermiediate-language/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "command-line-args": "^5.2.1",
     "command-line-usage": "^7.0.1",
+    "eslint": "^8.39.0",
     "jsonschema": "^1.4.1"
   }
 }
