--- a/scripts/timenet-xml-fix/package.json
+++ b/scripts/timenet-xml-fix/package.json
@@ -5,6 +5,7 @@
   "main": "cli.js",
   "dependencies": {
     "@tuiilm/timenet-xml-fix": "^1.0.6",
+    "eslint": "^8.39.0",
     "xml2js": "^0.4.19"
   },
   "scripts": {
