Add simulationDuration to package

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -535,3 +535,4 @@ _UI_ParameterReference_type = Parameter Reference
 _UI_ParameterReference_parameter_feature = Parameter
 _UI_Exponentiation_type = Exponentiation
 _UI_SetValue_value_feature = Value
+_UI_Package_simulationDuration_feature = Simulation Duration
