--- a/scripts/import-intermiediate-language/package.json
+++ b/scripts/import-intermiediate-language/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tuiilm/intermediate-language-model-to-e4sm",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "Translate an intermediate language model JSON file to an E4SM model",
   "main": "cli.js",
   "type": "module",
@@ -9,6 +9,7 @@
   },
   "files": [
     "cli.js",
+    "schema.json",
     "modules/transformations.js"
   ],
   "bin": {
