--- a/plugins/e4sm.de.metamodel.acceleo.documentation/build.properties
+++ b/plugins/e4sm.de.metamodel.acceleo.documentation/build.properties
@@ -1,6 +1,10 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .,\
-               bin/
+               .
 jre.compilation.profile = JavaSE-17
+additional.bundles = org.eclipse.core.runtime,\
+                     e4sm.de.metamodel,\
+                     e4sm.de.metamodel.xtext,\
+                     org.eclipse.xtext,\
+                     org.eclipse.acceleo.engine
