--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -536,3 +536,5 @@ _UI_ParameterReference_parameter_feature = Parameter
 _UI_Exponentiation_type = Exponentiation
 _UI_SetValue_value_feature = Value
 _UI_Package_simulationDuration_feature = Simulation Duration
+_UI_OutputPin_assignment_feature = Assignment
+_UI_OutputPin_outputExpression_feature = Output Expression
