--- a/plugins/e4sm.de.timenet.runner/build.properties
+++ b/plugins/e4sm.de.timenet.runner/build.properties
@@ -2,14 +2,6 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               lib/,\
                plugin.xml,\
-               .classpath,\
-               lib/jargs.jar,\
-               lib/antlr.jar,\
-               lib/RemoteSystem.jar,\
-               lib/gpsc.jar
-src.includes = lib/
-jars.compile.order = .,\
-                     lib/
-source.lib/ = 
+               lib/
+jars.compile.order = .
