--- a/plugins/e4sm.de.antlr4.petri.grammar/.project
+++ b/plugins/e4sm.de.antlr4.petri.grammar/.project
@@ -6,12 +6,12 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
-			<name>org.eclipse.buildship.core.gradleprojectbuilder</name>
+			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 		<buildCommand>
-			<name>org.eclipse.jdt.core.javabuilder</name>
+			<name>org.eclipse.buildship.core.gradleprojectbuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
@@ -25,8 +25,14 @@
 				</dictionary>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.m2e.core.maven2Builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
+		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>net.certiv.antlr.dt.core.nature</nature>
 		<nature>org.eclipse.buildship.core.gradleprojectnature</nature>
@@ -38,4 +44,15 @@
 			<location>C:/Projekte/E4SM/EDITOR/plugins/e4sm.de.antlr4.petri.grammar/build/gen-src/antlr/main</location>
 		</link>
 	</linkedResources>
+	<filteredResources>
+		<filter>
+			<id>1685696335472</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
