--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ plugins/e4sm.de.metamodel.to.scpn.qvto/docs/~$Transformation Definition.pptx
 
 scripts/timenet-xml-fix/node_modules/
 org.eclipse.buildship.core.prefs
+build.xml
+plugins/e4sm.de.metamodel.acceleo.documentation/tasks/generate.xml
