--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -538,3 +538,15 @@ _UI_SetValue_value_feature = Value
 _UI_Package_simulationDuration_feature = Simulation Duration
 _UI_OutputPin_assignment_feature = Assignment
 _UI_OutputPin_outputExpression_feature = Output Expression
+_UI_SecurityThreatsImport_type = Security Threats Import
+_UI_Model_securityThreatsDefinition_feature = Security Threats Definition
+_UI_Model_securityThreatsImport_feature = Security Threats Import
+_UI_SecurityThreatsImport_securityThreat_feature = Security Threat
+_UI_CVE_vectorString_feature = Vector String
+_UI_CVE_affectsComponents_feature = Affects Components
+_UI_CWE_cveId_feature = Cve Id
+_UI_CWE_vectorString_feature = Vector String
+_UI_CWE_affectsComponents_feature = Affects Components
+_UI_AttackVector_ADJACENT_NETWORK_literal = ADJACENT_NETWORK
+_UI_AttackVector_LOCAL_literal = LOCAL
+_UI_AttackVector_PHYSICAL_literal = PHYSICAL
