Add AttackSurface and Assets

--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -550,3 +550,7 @@ _UI_CWE_affectsComponents_feature = Affects Components
 _UI_AttackVector_ADJACENT_NETWORK_literal = ADJACENT_NETWORK
 _UI_AttackVector_LOCAL_literal = LOCAL
 _UI_AttackVector_PHYSICAL_literal = PHYSICAL
+_UI_AttackSurface_type = Attack Surface
+_UI_Model_securitySpecification_feature = Security Specification
+_UI_SecuritySpecification_attackSurfaces_feature = Attack Surfaces
+_UI_AttackSurface_component_feature = Component
