--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -554,3 +554,4 @@ _UI_AttackSurface_type = Attack Surface
 _UI_Model_securitySpecification_feature = Security Specification
 _UI_SecuritySpecification_attackSurfaces_feature = Attack Surfaces
 _UI_AttackSurface_component_feature = Component
+_UI_CVE_confidentialityImpact_feature = Confidentiality Impact
