--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -555,3 +555,5 @@ _UI_Model_securitySpecification_feature = Security Specification
 _UI_SecuritySpecification_attackSurfaces_feature = Attack Surfaces
 _UI_AttackSurface_component_feature = Component
 _UI_CVE_confidentialityImpact_feature = Confidentiality Impact
+_UI_Sensor_classificationClasses_feature = Classification Classes
+_UI_ClassificationClassDistribution_not_feature = Not
