--- a/plugins/e4sm.de.metamodel.edit/plugin.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin.properties
@@ -557,3 +557,4 @@ _UI_AttackSurface_component_feature = Component
 _UI_CVE_confidentialityImpact_feature = Confidentiality Impact
 _UI_Sensor_classificationClasses_feature = Classification Classes
 _UI_ClassificationClassDistribution_not_feature = Not
+_UI_Environment_oodProbability_feature = Ood Probability
