--- a/scripts/timenet-xml-fix/package.json
+++ b/scripts/timenet-xml-fix/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@tuiilm/timenet-xml-fix",
-  "version": "1.0.7",
+  "version": "1.1",
   "description": "Fixes the generated qVTO XML file in order to be opened by TimeNet. Optionally allows optimizing the generated net by removed unneeded immediate transitions",
   "main": "cli.js",
   "dependencies": {
-    "@tuiilm/timenet-xml-fix": "^1.0.7",
-    "eslint": "^8.39.0",
-    "xml2js": "^0.4.19"
+    "commander": "^12.0.0",
+    "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,6 +26,9 @@
   ],
   "bin": {
     "tn-fix-xml": "cli.js"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   },
   "author": "Francesco Bedini <francesco.bedini@tu-ilmenau.de> (https://sse.tu-ilmenau.de)",
   "license": "ISC"
