--- a/plugins/e4sm.de.metamodel.xtext/e4sm.de.metamodel.xtext.parent/e4sm.de.metamodel.xtext.ide/pom.xml
+++ b/plugins/e4sm.de.metamodel.xtext/e4sm.de.metamodel.xtext.parent/e4sm.de.metamodel.xtext.ide/pom.xml
@@ -6,7 +6,7 @@
 		<artifactId>e4sm.de.metamodel.xtext.parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>e4sm.de.metamodel.xtext</artifactId>
+	<artifactId>e4sm.de.metamodel.xtext.ide</artifactId>
 	<packaging>eclipse-plugin</packaging>
 
 	<build>
